--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AppModZone</title>
     <link rel="stylesheet" href="styles/styles.css">
-	<link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <meta name="description" content="AppModZone: Descarga aplicaciones modificadas y personalizadas de manera segura. Encuentra la app perfecta para ti.">
+    <meta name="keywords" content="apps modificadas, aplicaciones personalizadas, descargas seguras, AppModZone, mod, hackeados">
+    <meta name="author" content="AppModZone">
+    <meta name="robots" content="index, follow">
 </head>
 <body>
     <nav>
