--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
     <meta name="keywords" content="apps modificadas, aplicaciones personalizadas, descargas seguras, AppModZone, mod, hackeados">
     <meta name="author" content="AppModZone">
     <meta name="robots" content="index, follow">
+	<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-W9ZGG6SKDY"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-W9ZGG6SKDY');
+</script>
 </head>
 <body>
     <nav>
