--- a/category-apps.html
+++ b/category-apps.html
@@ -1,11 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aplicaciones de la Categoría - AppModZone</title>
-    <link rel="stylesheet" href="styles/styles.css">
-	<link rel="icon" href="favicon.ico" type="image/x-icon">
 	<!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-W9ZGG6SKDY"></script>
 <script>
@@ -14,7 +9,13 @@
   gtag('js', new Date());
 
   gtag('config', 'G-W9ZGG6SKDY');
-</script>
+</script
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Aplicaciones de la Categoría - AppModZone</title>
+    <link rel="stylesheet" href="styles/styles.css">
+	<link rel="icon" href="favicon.ico" type="image/x-icon">
+	
 </head>
 <body>
     <nav>
