--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-W9ZGG6SKDY"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-W9ZGG6SKDY');
+</script
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AppModZone</title>
@@ -10,15 +19,7 @@
     <meta name="keywords" content="apps modificadas, aplicaciones personalizadas, descargas seguras, AppModZone, mod, hackeados">
     <meta name="author" content="AppModZone">
     <meta name="robots" content="index, follow">
-	<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-W9ZGG6SKDY"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'G-W9ZGG6SKDY');
-</script>
 </head>
 <body>
     <nav>
